test/tests/stages/9_functions/valid/libraries/system_call_client.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[22]:
  int
  identifier(incr_and_print)
  (
  int
  identifier(c)
  )
  ;
  int
  identifier(main)
  (
  void
  )
  {
  identifier(incr_and_print)
  (
  const int(70)
  )
  ;
  return
  const int(0)
  ;
  }
