test/tests/stages/9_functions/invalid_declarations/nested_function_definition.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[22]:
  int
  identifier(main)
  (
  void
  )
  {
  int
  identifier(foo)
  (
  void
  )
  {
  return
  const int(1)
  ;
  }
  return
  identifier(foo)
  (
  )
  ;
  }
